# netbox-pdu-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  Makefile  README.md  TESTING.md  conftest.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yaml  publish-pypi.yaml
docs/superpowers/plans/: 2026-03-23-bulk-outlet-power-control.md
docs/superpowers/specs/: 2026-03-23-bulk-outlet-power-control-design.md
netbox_pdu_plugin/: __init__.py  choices.py  filtersets.py  forms.py  jobs.py  models.py  navigation.py  search.py  tables.py  template_content.py  urls.py  views.py
netbox_pdu_plugin/api/: __init__.py  serializers.py  urls.py  views.py
netbox_pdu_plugin/backends/: __init__.py  base.py  raritan.py  unifi.py
netbox_pdu_plugin/graphql/: __init__.py  enums.py  filters.py  schema.py  types.py
netbox_pdu_plugin/migrations/: 0001_initial.py  0005_managedpdu_metrics_status.py  __init__.py
netbox_pdu_plugin/templates/netbox_pdu_plugin/: managedpdu.html  pduinlet.html  pduoutlet.html
netbox_pdu_plugin/templates/netbox_pdu_plugin/inc/: device_pdu_button.html  device_pdu_outlets.html
netbox_pdu_plugin/testing/: __init__.py  utils.py
netbox_pdu_plugin/tests/: __init__.py  test_api.py  test_backends_raritan.py  test_backends_unifi.py  test_factory.py  test_graphql.py  test_models.py  test_views.py
testing/: configuration.py
tests/: __init__.py
